# gtk-cairo

./: CMakeLists.txt  INSTALL.txt  extract-dlls.py  install--repeated-dll-setup.bash  repeated-dll-setup.bash  script-out.bash  wine-output.txt
c_sources/: cairo2d.c
codeblocks-cairo/: codeblocks-cairo.cbp
